[metadata]
name = BluezCve
version = 0.1.0
description = Lightweight CVE checker and kernel reference tool
author = YourName
license = MIT

[options]
packages = find:
python_requires = >=3.9
install_requires =
    requests
    rich
    pyfiglet
    python-dotenv
    packaging

[options.entry_points]
console_scripts =
    BluezCve = BluezCve.__main__:main
